crates/vexor-compiler/tests/golden/error/input/rect_arity.vx
// too few arguments
let r = Rect(10)
export r
